--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -76,7 +76,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background: var(--primary);
+    background: rebeccapurple;
     animation: Nav--Links 0.2s ease;
   }
 
