--- a/src/templates/HomePage.css
+++ b/src/templates/HomePage.css
@@ -1,12 +1,56 @@
 .HomePage {
 }
+
 .HomePage--InviteAFellowPlanner {
   display: flex;
   align-items: center;
   flex-direction: row;
+  flex-grow: 1;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   background: rebeccapurple;
   color: var(--accent);
   padding: 2rem;
+}
+
+.HomePage--InviteAFellowPlanner--Heading {
+  width: 100%;
+  display: block;
+}
+
+.HomePage--InviteAFellowPlanner--Input {
+  width: 100%;
+  border: 3px solid white;
+  background: transparent;
+  padding: 1rem;
+  color: white;
+}
+
+.HomePage--InviteAFellowPlanner--Button {
+  border: 3px solid white;
+  background: white;
+  padding: 1rem;
+  transition: all 0.5s ease-out;
+  color: rebeccapurple;
+}
+
+.HomePage--InviteAFellowPlanner--Button:hover {
+  border: 3px solid rebeccapurple;
+  background: rebeccapurple;
+  padding: 1rem;
+  text-decoration: underline;
+  color: white;
+  cursor: pointer;
+}
+
+.HomePage--Reviews {
+  background: black;
+  display: flex;
+  padding: 2rem;
+}
+@media (min-width: 600px) {
+  .HomePage--InviteAFellowPlanner--Input--Container {
+    width: 50%;
+    padding: 0 2rem;
+  }
 }
