--- a/src/layouts/globalStyles.css
+++ b/src/layouts/globalStyles.css
@@ -34,7 +34,7 @@ body {
   font-family: var(--font-system);
   min-height: 100%;
   position: relative;
-  background: var(--background);
+  background: rgb(54, 52, 90);
   color: var(--lightGrey);
   font-size: 1.6em;
   font-weight: 400;
